permission,net,dgram: add permission for net

--- a/doc/node.1
+++ b/doc/node.1
@@ -94,6 +94,15 @@ Allow execution of WASI when using the permission model.
 .It Fl -allow-worker
 Allow creating worker threads when using the permission model.
 .
+.It Fl -allow-net-udp
+Allow UDP bind or connect when using the permission model.
+.
+.It Fl -allow-net-udp-in
+Allow UDP bind when using the permission model.
+.
+.It Fl -allow-net-udp-out
+Allow UDP connect when using the permission model.
+.
 .It Fl -completion-bash
 Print source-able bash completion script for Node.js.
 .
